# file-share-analyzer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
share_analyzer/: __init__.py  __main__.py  cli.py  config.py  dry_run.py  logging.py  tags.py
share_analyzer/crawl/: fingerprint.py  health.py  orchestrator.py  rescan.py  resume.py  retry.py  sink.py  walker.py
share_analyzer/index/: mime.py  queries.py  schema.py
share_analyzer/reports/: __init__.py  base.py  dashboard.py  duplication.py  rag_candidates.py  size_hotspots.py  staleness.py  topology.py  type_distribution.py
share_analyzer/reports/templates/: _base.html.j2  dashboard.html.j2  duplication.html.j2  size_hotspots.html.j2  staleness.html.j2  topology.html.j2  type_distribution.html.j2
share_analyzer/ui/: __init__.py  __main__.py  app.py  controller.py  folder_selection.py  folder_tree.py
tests/: conftest.py  test_cli.py  test_crawler.py  test_dashboard.py  test_dry_run.py  test_excludes.py  test_folder_selection.py  test_folders.py  test_health.py  test_migrations.py  test_orchestrator.py  test_parallel_walker.py  test_pause_resume.py  test_progress.py  test_queries.py  test_reports.py  test_rescan.py  test_retry.py  test_schema.py  test_tags.py  test_tags_integration.py  test_ui_controller.py
